Increased margin at the bottom of each page to avoid toolbar from being cut off

--- a/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/node/editor-component.scss
+++ b/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/node/editor-component.scss
@@ -3,15 +3,11 @@
 .oboeditor-component {
 	position: relative;
 
-	.component:last-child {
-		padding-bottom: 2em;
-	}
-
 	.component-toolbar {
 		position: absolute;
 		height: 100%;
 		top: 0;
-		z-index: $z-index-above-most;
+		z-index: $z-index-above-content;
 
 		.top {
 			top: 0;
